src/util/functions/_color.scss
@function flecss-color($name, $shade: null, $theme: null) {
    $shadeInfix: "--normal";
    @if $shade {
        @if $shade != "up" and $shade != "down" {
            @error "Invalid color shade #{$shade} (expects null or 'normal', 'up' or 'down')";
        }
        $shadeInfix: "--#{$shade}";
    }
    $themeInfix: "";
    @if $theme {
        @if $theme != "light" and $theme != "dark" {
            @error "Invalid color theme #{$theme} (expects null, 'light' or 'dark')";
        }
        $themeInfix: "--#{$theme}";
    }
    @return var(--flecss_color--#{$name}#{$shadeInfix}#{$themeInfix});
}

